content/docs/v0.0.1/reference/azurerm.kubeform.com/ApplicationInsights.md
---
title: ApplicationInsights
menu:
  docs_v0.0.1:
    identifier: applicationinsights-azurerm.kubeform.com
    name: ApplicationInsights
    parent: azurerm.kubeform.com-reference
    weight: 1
menu_name: docs_v0.0.1
section_menu_id: reference
info:
  version: v0.0.1
---

## ApplicationInsights
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `azurerm.kubeform.com/v1alpha1` |
|    `kind` | string | `ApplicationInsights` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[ApplicationInsightsSpec](#ApplicationInsightsSpec)***||
| `status` | ***[ApplicationInsightsStatus](#ApplicationInsightsStatus)***||
## ApplicationInsightsSpec
##### (Appears on:[ApplicationInsights](#ApplicationInsights), [ApplicationInsightsStatus](#ApplicationInsightsStatus))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `secretRef` | ***[Kubernetes core/v1.LocalObjectReference](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#localobjectreference-v1-core)***||
| `appID` | ***string***| ***(Optional)*** |
| `applicationType` | ***string***||
| `location` | ***string***||
| `name` | ***string***||
| `resourceGroupName` | ***string***||
| `tags` | ***map[string]string***| ***(Optional)*** |
## ApplicationInsightsStatus
##### (Appears on:[ApplicationInsights](#ApplicationInsights))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[ApplicationInsightsSpec](#ApplicationInsightsSpec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis.State***| ***(Optional)*** |
---
## Sensitive Values
| Name | Type | Description |
|------|------|-------------|
| `instrumentation_key` | ***string*** ||
